release/0.7.0: Fix the cosmetic bugs on Firefox

--- a/src/RouteEditor/RouteEditor.css
+++ b/src/RouteEditor/RouteEditor.css
@@ -12,6 +12,8 @@
     transform: translateX(-50%);
     left: 50%;
     position: relative;
+    text-align: center;
+    width: -moz-available;
 }
 
 .route-editor__img-container img {
